# hoi-mod-maker-gui

./: .gitignore  BUG_REPORT.md  README.md  fix-rust.ps1  gen-icon.ps1  index.html  package-lock.json  package.json  task-code-edit_20260604.md  task-monaco-fix-layout_20260604.md  task-summary_2026-04-26_0122.md  task-summary_2026-04-26_0158.md  task-summary_20260424_1848.md  task-summary_20260424_2000.md  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs  parser.rs  test_validator.rs  validator.rs
src/components/code-editor/: CodePanel.tsx
src/components/common/: ResizeHandle.tsx  ValidationPanel.tsx
src/components/debug/: DebugPanel.tsx  ErrorBoundary.tsx
src/components/events/: EventsPanel.tsx
src/components/focus-tree/: BlockEditor.tsx  BrokenLineEdge.tsx  FocusNodeComponent.tsx  FocusPropertyPanel.tsx  FocusTreeEditor.tsx  FocusTreePanel.tsx
src/components/ideas/: IdeasPanel.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx  Toolbar.tsx  WelcomeScreen.tsx
src/data/: icon_data.json  types.ts
src/stores/: index.ts
src/styles/: global.css
