[package]
name = "hoi-mod-maker-gui"
version = "0.1.0"
description = "HOI4 Mod Maker GUI - Visual Focus Tree Editor"
authors = ["HOI Mod Maker Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1"
regex = "1"
